Fix sizing bug uncovered by new Firefox

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
     height: calc(99vh - 40px);
 }
 #codearea {
-    width: calc(100% - 200px);
+    width: calc(100% - 460px);
     height: 90vh; /* Work around Chrome bug 168840*/
     height: calc(99vh - 40px);
     background: #ddd;
